--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -82,8 +81,9 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-.env
-.venv
+.env/
+.venv/
+venv_installer/
 env/
 venv/
 ENV/
